--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,10 @@ authors = ["Jose Manuel de Frutos"]
 version = "0.1.0"
 
 [deps]
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 
 [compat]
-DifferentialEquations = "7"
+DifferentialEquations = "6"
 julia = "1"
 
 [extras]
